--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ node_modules/
 .expo/
 dist/
 web-build/
-
+android/
 # Native
 *.orig.*
 *.jks
@@ -33,3 +33,4 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+src/pages/Contacts/api.tsx
